add new api to create comment
